[metadata]
name = Flask-Authlib
version = 1.6.0
author = Abduaziz Ziyodov
author_email = abduaziz.ziyodov@mail.ru
url = https://github.com/AbduazizZiyodov/flask-authlib
description = Authentication library for Flask Web Framework

long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

platform = any

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Web Environment

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = find:

setup_requires =
    setuptools
    wheel

install_requires =
    flask 
    flask_login
    sqlalchemy 
    flask_sqlalchemy
    cryptography==3.3.2 
    python-jose 
    pydantic 
    email-validator 
    rich